2006-01-23  Tom Tromey  <tromey@redhat.com>

	* java/sql/Date.java (toString): Not deprecated.
	(valueOf): Likewise.
	* java/sql/Time.java (valueOf): Not deprecated.
	(toString): Likewise.

2006-01-21  Matthias Klose  <doko@debian.org>

	* java/lang/mprec.h: Fix typo in previous patch.

2006-01-21  Matthias Klose  <doko@debian.org>

	Backport:
	2005-09-15  Tom Tromey  <tromey@redhat.com>
	Workaround for PR classpath/23863:
	* java/lang/mprec.h (MAX_BIGNUM_WDS): Define as 128 on
	non-Pack_32 platforms.

2006-01-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR libgcj/25840
	* include/x86_64-signal.h (RESTORE2): Add ".text\n".

2006-01-04  Krister Walfridsson  <cato@df.lth.se>

	* posix-threads.cc (_Jv_InitThreads): #ifdef PTHREAD_STACK_MIN

2005-12-28  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* sysdep/pa/locks.h (compare_and_swap): Add ldcw semaphore to make
	operation atomic.

2005-12-18  Anthony Green  <green@redhat.com>

	* gnu/java/net/natPlainDatagramSocketImplPosix.cc (getLocalAddress): 
	New helper function.
	(setOption): Use getLocalAddress.  Don't downcast value to
	InetAddress.
	(getOption): Use getLocalAddress.

2005-12-16  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.jacks/jacks.xfail
	(8.5.2-accessible-static-member-usage-3): Removed.

2005-12-15  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.compile/rh175833.java: New file.
	* testsuite/libjava.compile/pr25429.java: New file.

2005-12-05  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.compile/rh174912.java: New file.

2005-11-29  Tom Tromey  <tromey@redhat.com>

	PR java/18278:
	* testsuite/libjava.jni/pr18278.out: New file.
	* testsuite/libjava.jni/pr18278.c: New file.
	* testsuite/libjava.jni/pr18278.java: New file.
	* include/jvm.h (_Jv_UnwrapJNIweakReference): Declare.
	* jni.cc (_Jv_UnwrapJNIweakReference): New function.
	(call): Unwrap return value if needed.

2005-11-25  Andrew Haley  <aph@redhat.com>

	PR libgcj/25016