@@ -1,3 +1,11 @@
+2006-02-06  Tom Tromey  <tromey@redhat.com>
+
+	* gnu/java/rmi/registry/RegistryImpl.java (version): Use 2006.
+	* gnu/gcj/tools/gcj_dbtool/Main.java (main): Use 2006.
+	* gij.cc (version): Use 2006.
+	* gnu/gcj/convert/Convert.java (version): Use 2006.
+	* gnu/java/rmi/rmic/RMIC.java (parseOptions): Use 2006.
+
 2006-01-23  Tom Tromey  <tromey@redhat.com>
 
 	* java/sql/Date.java (toString): Not deprecated.
